--- a/project-computer/src/Assets/header.css
+++ b/project-computer/src/Assets/header.css
@@ -3,7 +3,7 @@
 }
 
 .header-width {
-  height: 3vw;
+  height: 4vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -12,23 +12,23 @@
   margin: auto;
 }
 .logo {
-  height: 400%;
+  height: 300%;
 }
 .dropdown {
   width: 14%;
-  height: 70%;
+  height: 60%;
   background-color: #8a6c1c;
   color: #fff;
   border-radius: 5px;
 }
 .search {
   background-color: #fff;
-  height: 70%;
+  height: 55%;
   width: 25%;
 }
 
 .search-input {
-  height: 90%;
+  height: 85%;
   width: 80%;
   border: none;
 }
@@ -36,18 +36,19 @@
 .search-btn {
   border: none;
   background-color: #fff;
-  height: 90%;
+  height: 1vw;
   width: 14%;
 }
 .button {
+  font-size: 0.6vw;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 15%;
 }
 .account-btn {
-  height: 4.4vh;
+  height: 2.5vw;
   width: 48%;
   background-color: #8a6c1c;
   color: #fff;
@@ -65,6 +66,8 @@
   width: 25%;
   color: #fff;
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1vw;
 }
 
+@media screen and (min-width: 641px) and (max-width: 1024px) {
+}
