--- a/project-computer/src/Assets/nav.css
+++ b/project-computer/src/Assets/nav.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   color: #fff;
-  font-size: 1rem;
+  font-size: 1vw;
   font-weight: bold;
 }
 
