--- a/project-computer/src/Layout/phone/phone.css
+++ b/project-computer/src/Layout/phone/phone.css
@@ -2,3 +2,14 @@
   display: flex;
   flex-direction: row;
 }
+
+.mt-4 {
+  margin: auto;
+  padding: auto;
+}
+
+.list-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+}
